--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
+    "recharts": "^3.4.1",
     "redux": "^5.0.1",
     "redux-actions": "^3.0.3",
     "redux-first-history": "^5.2.0",
